--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-26  Matthias Clasen  <mclasen@redhat.com>
 
+	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): 
+	Unregister XIM callbacks here.  (#309054)
+
+	* modules/input/gtkimcontextxim.h: Small cleanup.
+
 	* gtk/gtkmenu.c (gtk_menu_paint): Pay attention to the
 	scroll offset when drawing the box.  (#308834, Tom von 
 	Schwerdtner)
