--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): 
+	Unregister XIM callbacks here.  (#309054)
+
 2005-06-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtktextview.c (gtk_text_view_scroll_hpages): Don't
