--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-27  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkiconcache.c (_gtk_icon_cache_new_for_path): Use
+	GMappedFile.
+
+	* configure.in: Require GLib 2.7.1
+
 2005-06-26  Matthias Clasen  <mclasen@redhat.com>
 
 	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): 
