--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-06-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gtk/gtkhruler.c: (gtk_hruler_draw_ticks): Fix leaks
+	* gtk/gtkvruler.c: (gtk_vruler_draw_ticks): Same
+	Closes bug #308953.
+
 2005-06-27  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkiconcache.c (_gtk_icon_cache_new_for_path): Use
