--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-27  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-06-25  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
