--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-27  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkbutton.c (gtk_real_button_activate): Continue
+	to activate even if we can't grab the keyboard.
+	(gtk_button_finish_activate): Only ungrab when we have
+	a keyboard grab.  (#172998, William Jon McCann)
+
 	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): 
 	Avoid a segfault. (#309054)
 
