--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-06-27  Matthias Clasen  <mclasen@redhat.com>
 
+	* demos/gtk-demo/main.c (create_tree): Make the list of
+	demos scrollable.
+
 	* gtk/gtktextlayout.c (gtk_text_layout_move_iter_to_line_end): 
 	Fix positioning at the end of the line for lines ending
 	in invisible characters.
