--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-30  Matthias Clasen  <mclasen@redhat.com>
+
+	* NEWS: Updates
+
 2005-06-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkbutton.c (gtk_button_grab_broken): Handle broken
