--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-06-30  Matthias Clasen  <mclasen@redhat.com>
 
+	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): Don't
+	prematurely unregister callbacks. 
+
 	* NEWS: Updates
 
 2005-06-29  Matthias Clasen  <mclasen@redhat.com>
