--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-30  Matthias Clasen  <mclasen@redhat.com>
+
+	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): 
+	Don't prematurely unregister callbacks.
+
 2005-06-27  Matthias Clasen  <mclasen@redhat.com>
 
 	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): 
