--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-06-30  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_fetch_child): 
+	Clarify the code, gcc 4 complains about predecrement in MAX().
+
 	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize): Don't
 	prematurely unregister callbacks. 
 
