--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,16 +1,17 @@
 # traditional Chinese translation of gtk+ 2.x
 # Copyright (C) 2000, 01, 02, 03, 04, 05 Free Software Foundation, Inc.
 # Chih-Wei Huang <cwhuang@linux.org.tw>, 2000.
-# Abel Cheung <abel@oaka.org>, 2001-03, 05.
+# Abel Cheung <abel@oaka.org>, 2001-2003, 2005.
 # 辛立仁 <hsin@med.cgu.edu.tw>, 2000, 2004.
 # Woodman Tuen <wmtuen@gmail.com>, 2005.
+# Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk+ 2.6.4\n"
+"Project-Id-Version: gtk+ 2.6.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-06-22 13:06+0000\n"
-"PO-Revision-Date: 2005-06-20 17:54+0800\n"
+"POT-Creation-Date: 2005-06-26 16:35+0800\n"
+"PO-Revision-Date: 2005-06-27 06:12+0800\n"
 "Last-Translator: Chao-Hsiung Liao <j_h_liau@yahoo.com.tw>\n"
 "Language-Team: Chinese (traditional) <community@linuxhall.org>\n"
 "MIME-Version: 1.0\n"
@@ -919,7 +920,7 @@ msgstr "calendar:week_start:0"
 #: ../gtk/gtkcellrendererprogress.c:236 ../gtk/gtkcellrendererprogress.c:294
 #, c-format
 msgid "progress bar label|%d %%"
-msgstr "進度列標籤|%d %%"
+msgstr "%d %%"
 
 #: ../gtk/gtkcolorbutton.c:220 ../gtk/gtkcolorbutton.c:574
 msgid "Pick a Color"
@@ -935,15 +936,14 @@ msgid ""
 "now. You can drag this color to a palette entry, or select this color as "
 "current by dragging it to the other color swatch alongside."
 msgstr ""
-"之前選擇的顏色，用來和目前選擇的顏色作比較。閣下可以將本顏色拖曳至色盤項"
-"目；\n"
+"之前選擇的顏色，用來和目前選擇的顏色作比較。您可以將本顏色拖曳至色盤項目；\n"
 "或以它作為目前選擇的顏色，方法是將它拖曳並覆蓋目前選擇的顏色。"
 
 #: ../gtk/gtkcolorsel.c:581
 msgid ""
 "The color you've chosen. You can drag this color to a palette entry to save "
 "it for use in the future."
-msgstr "所選擇的顏色；閣下可以將此顏色拖曳到色盤並將之儲存供日後使用。"
+msgstr "所選擇的顏色；您可以將此顏色拖曳到色盤並將之儲存供日後使用。"
 
 #: ../gtk/gtkcolorsel.c:942
 msgid "_Save color here"
@@ -973,7 +973,7 @@ msgstr "按下滴管，然後按畫面任何一處來選擇該顏色。"
 
 #: ../gtk/gtkcolorsel.c:1947
 msgid "_Hue:"
-msgstr "色相(_H)："
+msgstr "色相(_H):"
 
 #: ../gtk/gtkcolorsel.c:1948
 msgid "Position on the color wheel."
@@ -981,7 +981,7 @@ msgstr "色相環的位置。"
 
 #: ../gtk/gtkcolorsel.c:1950
 msgid "_Saturation:"
-msgstr "彩度(_S)："
+msgstr "彩度(_S):"
 
 #: ../gtk/gtkcolorsel.c:1951
 msgid "\"Deepness\" of the color."
@@ -989,7 +989,7 @@ msgstr "顏色的「深度」。"
 
 #: ../gtk/gtkcolorsel.c:1952
 msgid "_Value:"
-msgstr "明度(_V)："
+msgstr "明度(_V):"
 
 #: ../gtk/gtkcolorsel.c:1953
 msgid "Brightness of the color."
@@ -997,7 +997,7 @@ msgstr "顏色的亮度。"
 
 #: ../gtk/gtkcolorsel.c:1954
 msgid "_Red:"
-msgstr "紅(_R)："
+msgstr "紅(_R):"
 
 #: ../gtk/gtkcolorsel.c:1955
 msgid "Amount of red light in the color."
@@ -1005,7 +1005,7 @@ msgstr "顏色中的紅色份量。"
 
 #: ../gtk/gtkcolorsel.c:1956
 msgid "_Green:"
-msgstr "綠(_G)："
+msgstr "綠(_G):"
 
 #: ../gtk/gtkcolorsel.c:1957
 msgid "Amount of green light in the color."
@@ -1013,7 +1013,7 @@ msgstr "顏色中的綠色份量。"
 
 #: ../gtk/gtkcolorsel.c:1958
 msgid "_Blue:"
-msgstr "藍(_B)："
+msgstr "藍(_B):"
 
 #: ../gtk/gtkcolorsel.c:1959
 msgid "Amount of blue light in the color."
@@ -1021,7 +1021,7 @@ msgstr "顏色中的藍色份量。"
 
 #: ../gtk/gtkcolorsel.c:1962
 msgid "_Opacity:"
-msgstr "透明度(_O)："
+msgstr "透明度(_O):"
 
 #: ../gtk/gtkcolorsel.c:1970 ../gtk/gtkcolorsel.c:1981
 msgid "Transparency of the color."
@@ -1029,14 +1029,14 @@ msgstr "目前選擇顏色的透明度。"
 
 #: ../gtk/gtkcolorsel.c:1988
 msgid "Color _Name:"
-msgstr "顏色名稱(_N)："
+msgstr "顏色名稱(_N):"
 
 #: ../gtk/gtkcolorsel.c:2003
 msgid ""
 "You can enter an HTML-style hexadecimal color value, or simply a color name "
 "such as 'orange' in this entry."
 msgstr ""
-"閣下可在本欄輸入 HTML 方式的 16 進位色彩值，或是像‘orange’的普通顏色名稱。"
+"您可在本欄輸入 HTML 方式的 16 進位色彩值，或是像‘orange’的普通顏色名稱。"
 
 #: ../gtk/gtkcolorsel.c:2022
 msgid "_Palette"
@@ -1050,15 +1050,15 @@ msgstr "色彩圓盤"
 msgid "Color Selection"
 msgstr "色彩選擇"
 
-#: ../gtk/gtkentry.c:4510 ../gtk/gtktextview.c:7051
+#: ../gtk/gtkentry.c:4510 ../gtk/gtktextview.c:7049
 msgid "Select _All"
 msgstr "全部選取(_A)"
 
-#: ../gtk/gtkentry.c:4520 ../gtk/gtktextview.c:7061
+#: ../gtk/gtkentry.c:4520 ../gtk/gtktextview.c:7059
 msgid "Input _Methods"
 msgstr "輸入法(_M)"
 
-#: ../gtk/gtkentry.c:4531 ../gtk/gtktextview.c:7072
+#: ../gtk/gtkentry.c:4531 ../gtk/gtktextview.c:7070
 msgid "_Insert Unicode Control Character"
 msgstr "插入統一碼控制字元(_I)"
 
@@ -1084,7 +1084,7 @@ msgstr "桌面"
 
 #: ../gtk/gtkfilechooserbutton.c:69
 msgid "(None)"
-msgstr "（沒有）"
+msgstr "(沒有)"
 
 #: ../gtk/gtkfilechooserbutton.c:1522
 msgid "Other..."
@@ -1214,7 +1214,7 @@ msgstr "建立資料夾(_L)"
 #. Name entry
 #: ../gtk/gtkfilechooserdefault.c:3525
 msgid "_Name:"
-msgstr "名稱(_N)："
+msgstr "名稱(_N):"
 
 #: ../gtk/gtkfilechooserdefault.c:3565
 msgid "_Browse for other folders"
@@ -1222,11 +1222,11 @@ msgstr "瀏覽其他資料夾(_B)"
 
 #: ../gtk/gtkfilechooserdefault.c:3815
 msgid "Save in _folder:"
-msgstr "儲存於資料夾(_F)："
+msgstr "儲存於資料夾(_F):"
 
 #: ../gtk/gtkfilechooserdefault.c:3817
 msgid "Create in _folder:"
-msgstr "新增於資料夾(_F)："
+msgstr "新增於資料夾(_F):"
 
 #: ../gtk/gtkfilechooserdefault.c:4774
 msgid "Cannot change to folder because it is not local"
@@ -1240,7 +1240,7 @@ msgstr "捷徑 %s 不存在"
 #: ../gtk/gtkfilechooserdefault.c:5872
 #, c-format
 msgid "Could not mount %s"
-msgstr "無法裝載 %s"
+msgstr "無法掛載 %s"
 
 #: ../gtk/gtkfilechooserdefault.c:6167
 msgid "Type name of new folder"
@@ -1306,7 +1306,7 @@ msgstr "存入位置"
 
 #: ../gtk/gtkfilechooserdefault.c:6503
 msgid "_Location:"
-msgstr "位置(_L)："
+msgstr "位置(_L):"
 
 #: ../gtk/gtkfilesel.c:732
 msgid "Folders"
@@ -1364,7 +1364,7 @@ msgstr ""
 
 #: ../gtk/gtkfilesel.c:1449 ../gtk/gtkfilesel.c:1685
 msgid "You probably used symbols not allowed in filenames."
-msgstr "閣下可能使用了檔案名稱中不應出現的符號。"
+msgstr "您可能使用了檔案名稱中不應出現的符號。"
 
 #: ../gtk/gtkfilesel.c:1457
 #, c-format
@@ -1377,7 +1377,7 @@ msgstr "新增資料夾"
 
 #: ../gtk/gtkfilesel.c:1506
 msgid "_Folder name:"
-msgstr "資料夾名稱(_F)："
+msgstr "資料夾名稱(_F):"
 
 #: ../gtk/gtkfilesel.c:1530
 msgid "C_reate"
@@ -1458,7 +1458,7 @@ msgstr "更改名稱(_R)"
 
 #: ../gtk/gtkfilesel.c:2230
 msgid "_Selection: "
-msgstr "選取檔案(_S)："
+msgstr "選取檔案(_S):"
 
 #: ../gtk/gtkfilesel.c:3153
 #, c-format
@@ -1484,54 +1484,54 @@ msgstr "無法轉換檔案名稱"
 msgid "(Empty)"
 msgstr "(空的)"
 
-#: ../gtk/gtkfilesystemunix.c:460 ../gtk/gtkfilesystemunix.c:662
-#: ../gtk/gtkfilesystemunix.c:1769 ../gtk/gtkfilesystemwin32.c:482
+#: ../gtk/gtkfilesystemunix.c:461 ../gtk/gtkfilesystemunix.c:666
+#: ../gtk/gtkfilesystemunix.c:1794 ../gtk/gtkfilesystemwin32.c:482
 #: ../gtk/gtkfilesystemwin32.c:495 ../gtk/gtkfilesystemwin32.c:1560
 #, c-format
 msgid "Error getting information for '%s': %s"
 msgstr "取得‘%s’的資訊時發生錯誤：%s"
 
-#: ../gtk/gtkfilesystemunix.c:531 ../gtk/gtkfilesystemwin32.c:537
+#: ../gtk/gtkfilesystemunix.c:535 ../gtk/gtkfilesystemwin32.c:537
 #, c-format
 msgid "Error creating directory '%s': %s"
 msgstr "建立資料夾‘%s’時發生錯誤：%s"
 
-#: ../gtk/gtkfilesystemunix.c:611 ../gtk/gtkfilesystemwin32.c:597
+#: ../gtk/gtkfilesystemunix.c:615 ../gtk/gtkfilesystemwin32.c:597
 msgid "This file system does not support mounting"
 msgstr "本檔案系統並不支援掛載"
 
-#: ../gtk/gtkfilesystemunix.c:619
+#: ../gtk/gtkfilesystemunix.c:623
 msgid "Filesystem"
 msgstr "檔案系統"
 
-#: ../gtk/gtkfilesystemunix.c:776
+#: ../gtk/gtkfilesystemunix.c:780
 #, c-format
 msgid "Could not get a stock icon for %s"
 msgstr "無法為 %s 取得內建圖示"
 
-#: ../gtk/gtkfilesystemunix.c:871
+#: ../gtk/gtkfilesystemunix.c:875
 #, c-format
 msgid ""
 "The name \"%s\" is not valid because it contains the character \"%s\". "
 "Please use a different name."
 msgstr "名稱“%s”是無效的因為其包含了字元“%s”。請選擇另一個名稱。"
 
-#: ../gtk/gtkfilesystemunix.c:1476 ../gtk/gtkfilesystemwin32.c:1032
+#: ../gtk/gtkfilesystemunix.c:1480 ../gtk/gtkfilesystemwin32.c:1032
 #, c-format
 msgid "Bookmark saving failed: %s"
 msgstr "儲存書籤失敗：%s"
 
-#: ../gtk/gtkfilesystemunix.c:1528
+#: ../gtk/gtkfilesystemunix.c:1541
 #, c-format
 msgid "'%s' already exists in the bookmarks list"
 msgstr "‘%s’已存在於書籤中"
 
-#: ../gtk/gtkfilesystemunix.c:1590
+#: ../gtk/gtkfilesystemunix.c:1612
 #, c-format
 msgid "'%s' does not exist in the bookmarks list"
 msgstr "‘%s’不存在於書籤中"
 
-#: ../gtk/gtkfilesystemunix.c:1729
+#: ../gtk/gtkfilesystemunix.c:1754
 #, c-format
 msgid "Error getting information for '/': %s"
 msgstr "取得‘/’的資訊時發生錯誤：%s"
@@ -1557,20 +1557,20 @@ msgstr "abcd ABCD 中文測試"
 
 #: ../gtk/gtkfontsel.c:360
 msgid "_Family:"
-msgstr "字集(_F)："
+msgstr "字集(_F):"
 
 #: ../gtk/gtkfontsel.c:366
 msgid "_Style:"
-msgstr "款式(_S)："
+msgstr "款式(_S):"
 
 #: ../gtk/gtkfontsel.c:372
 msgid "Si_ze:"
-msgstr "大小(_Z)："
+msgstr "大小(_Z):"
 
 #. create the text entry widget
 #: ../gtk/gtkfontsel.c:548
 msgid "_Preview:"
-msgstr "預覽(_P)："
+msgstr "預覽(_P):"
 
 #: ../gtk/gtkfontsel.c:1382
 msgid "Font Selection"
@@ -1624,7 +1624,7 @@ msgstr "無延伸輸入裝置"
 
 #: ../gtk/gtkinputdialog.c:256
 msgid "_Device:"
-msgstr "裝置(_D)："
+msgstr "裝置(_D):"
 
 #: ../gtk/gtkinputdialog.c:273
 msgid "Disabled"
@@ -1640,7 +1640,7 @@ msgstr "視窗"
 
 #: ../gtk/gtkinputdialog.c:294
 msgid "_Mode: "
-msgstr "模式(_M)："
+msgstr "模式(_M):"
 
 #. The axis listbox
 #: ../gtk/gtkinputdialog.c:325
@@ -2089,7 +2089,7 @@ msgstr "_RLM 右至左標記"
 
 #: ../gtk/gtktextutil.c:50
 msgid "LRE Left-to-right _embedding"
-msgstr "LRE 左至右內嵌(_E)"
+msgstr "LR_E 左至右內嵌"
 
 #: ../gtk/gtktextutil.c:51
 msgid "RLE Right-to-left e_mbedding"
@@ -2097,27 +2097,27 @@ msgstr "RLE 右至左內嵌(_M)"
 
 #: ../gtk/gtktextutil.c:52
 msgid "LRO Left-to-right _override"
-msgstr "LRO 左至右覆蓋(_O)"
+msgstr "LR_O 強制左至右"
 
 #: ../gtk/gtktextutil.c:53
 msgid "RLO Right-to-left o_verride"
-msgstr "RLO 右至左覆蓋(_V)"
+msgstr "RLO 強制右至左(_V)"
 
 #: ../gtk/gtktextutil.c:54
 msgid "PDF _Pop directional formatting"
-msgstr "_PDF 熱門導向格式"
+msgstr "_PDF 回復以往格式"
 
 #: ../gtk/gtktextutil.c:55
 msgid "ZWS _Zero width space"
-msgstr "ZWS 零寬度空格(_Z)"
+msgstr "_ZWS 零寬度空格"
 
 #: ../gtk/gtktextutil.c:56
 msgid "ZWJ Zero width _joiner"
-msgstr "ZWJ 零寬度合併(_J)"
+msgstr "ZW_J 零寬度合併"
 
 #: ../gtk/gtktextutil.c:57
 msgid "ZWNJ Zero width _non-joiner"
-msgstr "ZWNJ 零寬度非合併(_N)"
+msgstr "ZW_NJ 零寬度非合併"
 
 #: ../gtk/gtkthemes.c:71
 #, c-format
