Updated Traditional Chinese translation.
2005-07-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

        * zh_TW.po: Updated Traditional Chinese translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
+
+        * zh_TW.po: Updated Traditional Chinese translation.
+
 2005-06-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
