--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-07-01  Matthias Clasen  <mclasen@redhat.com>
 
+	* configure.in: Bump version.
+
 	* === Released 2.7.1 ===
 	
 	* NEWS: Updates
