--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtksettings.c (gtk_settings_class_init): Correct the 
+	blurb for the icon-sizes setting. String change.  
+	(#309355, Benjamin Berg)
+
 2005-07-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version.
