--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtk+\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-07-01 14:31-0400\n"
-"PO-Revision-Date: 2005-06-17 03:57-0400\n"
+"POT-Creation-Date: 2005-07-03 18:34-0400\n"
+"PO-Revision-Date: 2005-07-03 03:57-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: Canadian English <adamw@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -2083,11 +2083,11 @@ msgstr "_Floppy"
 
 #: gtk/gtkstock.c:333
 msgid "_Fullscreen"
-msgstr ""
+msgstr "_Fullscreen"
 
 #: gtk/gtkstock.c:334
 msgid "_Leave Fullscreen"
-msgstr ""
+msgstr "_Leave Fullscreen"
 
 #. translators, strip the prefix up to and including the first |
 #: gtk/gtkstock.c:336
@@ -2154,9 +2154,8 @@ msgid "_Index"
 msgstr "_Index"
 
 #: gtk/gtkstock.c:357
-#, fuzzy
 msgid "_Information"
-msgstr "Information"
+msgstr "_Information"
 
 #: gtk/gtkstock.c:358
 msgid "_Italic"
@@ -2472,6 +2471,3 @@ msgstr "X Input Method"
 #, c-format
 msgid "Could not get information for file '%s': %s"
 msgstr "Could not get information for file '%s': %s"
-
-#~ msgid "Writing %s failed: %s"
-#~ msgstr "Write to %s failed: %s"
