--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/Makefile.am: Distribute the keyname-table.h header 
+	and the files that are used to construct it.  (#309421,
+	J. Ali Harlow)
+
 2005-07-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkmenubar.c (gtk_menu_bar_set_pack_direction) 
