--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/images/file-button.png: Update the image
+
 2005-06-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.8 ===
