--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* doc/tools/widgets.c: Actually generate a file-button
+	image.
+
 2005-07-06  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/win32/gdkcursor-win32.c: Add comment about the current named
