--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,9 @@
 2005-07-05  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/images/file-button.png: Update
+
+2005-07-05  Matthias Clasen  <mclasen@redhat.com>
+
 	* gtk/gtk-sections.txt: Add new api.
 
 2005-07-04  Matthias Clasen  <mclasen@redhat.com>
