--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-07-05  Matthias Clasen  <mclasen@redhat.com>
 
+	* modules/input/imime.c: Fix includes.  (#309462, Kazuki IWAMOTO)
+
+2005-07-05  Matthias Clasen  <mclasen@redhat.com>
+
 	* doc/tools/widgets.c: Actually generate a file-button
 	image.
 
