--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* modules/input/imime.c: Fix includes.  (#309462, Kazuki IWAMOTO)
+
 2005-07-03  Manish Singh  <yosh@gimp.org>
 
 	* gtk/gtktreeview.c (gtk_tree_view_vertical_autoscroll): remove
