--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/tmpl/general.sgml: Point to GdkEventGrabBroken
+	from the gdk_pointer_grab and gdk_keyboard_grab docs.
+
 2005-07-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/building.sgml: Document Cairo as a 
